# Parallel-N-Queens

./: .gitignore  README.md
contrib/: helper_string.h
cw2/: CMakeLists.txt  gpuErrchk.h  nqueens-gpu.cu  nqueens-openmp.cpp  nqueens-serial.cpp
